--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,11 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                
               }
             ],
             "styles": [
@@ -88,6 +90,7 @@
               {
                 "glob": "**/*",
                 "input": "public"
+               
               }
             ],
             "styles": [
