--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
               
               {
                 "glob": "**/*",
-                "input": "public",
+    "input": "public/assets",
+    "output": "assets"
                 
               }
             ],
@@ -89,7 +90,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+    "input": "public/assets",
+    "output": "assets"
                
               }
             ],
